# rust_matrix

./: Cargo.toml  LICENSE  README.md
src/: column.rs  dense_matrix.rs  error.rs  factories.rs  format.rs  iter.rs  lib.rs  matrix.rs  matrix_address.rs  row.rs  traits.rs  transpose.rs
