[package]
name = "matrix"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
description = "a pure-safe-rust, zero dependency matrix data structure"
homepage = "https://github.com/jeffbstewart/rust_matrix"
repository = "https://github.com/jeffbstewart/rust_matrix"
readme = "README.md"
exclude = ["target", ".git"]

[dependencies]

