[package]
name = "rust_advent_matrix"
version = "1.1.1"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
description = "a pure-safe-rust, zero dependency matrix data structure"
homepage = "https://github.com/jeffbstewart/rust_matrix"
repository = "https://github.com/jeffbstewart/rust_matrix"
readme = "README.md"
exclude = ["target", ".git"]

[dependencies]

